CSVDataContainerTest